--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "oak",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/wieden-kennedy/oak-inherit",
   "authors": [
     "Maxwell Folley"
@@ -25,5 +25,8 @@
     "src",
     "spec",
     "bower.json"
-  ]
+  ],
+  "dependencies": {
+    "oak": "~0.0.2"
+  }
 }
